--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
 
         А можно подать куриный бульон как самостоятельное блюдо. В этом случае бульон наливают в пиалу или специальную чашку, посыпав молотым черным перцем и рубленой зеленью.</li>
     </ol>
+    <a href="info.html"></a>
 </body>
+
 </html>
