--- a/info.html
+++ b/info.html
@@ -50,8 +50,70 @@
         <li>звуковая</li>
         <li>мультимедийная</li>
     </ul>
-    <p>Полезность информации определяется по нескольким критериям:</p>
-    
 <img src="C:\Users\Студент\Desktop\Быков\виды информации.png" alt="">
+  <p>Полезность информации определяется по нескольким критериям:</p>
+    <ul>
+        <li>Объективность - информация не зависит от мнения её получателя</li>
+        <li>Достоверность - отражает истинное положение дел</li>
+        <li>Полнота - объём информации достаточен для решения задачи</li>
+        <li>Актуальность - информация доставлена вовремя</li>
+        <li>Полезность - нужна для принятия решения (решения задач)</li>
+        <li>Понятность - выражена на языке, понятном тому, для кого она предназначена</li>
+    </ul>
+    <p>Основные виды действий с информацией:</p>
+    <ul>
+        <li>Получение информации - это действие, связанное со сбором новых сведений о чём-либо</li>
+        <li>Представление информции - это запись полученных сведений с помощью языков кодирования</li>
+        <li>Обработка информации - это процесс преобразования информации</li>
+    </ul>
+    <p>Данные - это информация, которая записана с помощью какого-либо кода</p>
+    <p>Цифровые данные - это информация, представленная в виде числовых кодов</p>
+    <p>Двоичный код - это строка символов, состоящих из 0 и 1</p>
+    <p>Алфавит, который состоит из двух символов, называется двоичным алфавитом</p>
+    <p>Мощность алфавита - это количество символов, которые в него входят</p>
+    <p>Запись информации с помощью двоичного алфавита называют двоичным кодированием</p>
+    <table>
+        <tr>
+            <td>Разрядность двоичного кода</td>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+            <td>5</td>
+            <td>6</td>
+            <td>7</td>
+            <td>8</td>
+            <td>9</td>
+            <td>10</td>
+        </tr>
+        <tr>
+            <td>Количество цифр (комбинаций), которые можно закодировать</td>
+            <td>2</td>
+            <td>4</td>
+            <td>8</td>
+            <td>16</td>
+            <td>32</td>
+            <td>64</td>
+            <td>128</td>
+            <td>256</td>
+            <td>512</td>
+            <td>1024</td>
+        </tr>
+    </table>
+    <p>Двоичное дерево - это схема, по которой можно определить, сколько вариантов кодов можно получить исходя из длины цепочки символов</p>
+    <p>Бит - это наименьшая единица измерения информации</p>
+    <table>
+        <tr>
+        <tb>1 байт = 8 бит</tb>
+        <tr>1 Кб (килобайт) = 1024 байт</tr>
+        <tr>1 Мб (мегабайт) = 1024 Кб</tr>
+        <tr>1 Гб (гигабайт) = 1024 Мб</tr>
+        <tr>1 Тб (терабайт) = 1024 Гб</tr>
+        <tr>1 Пт (петабайт) = 1024 Тб</tr>
+        <tr>1 Эб (эксабайт) = 1024 Пт</tr>
+        <tr>1 Зб (зеттабайт) = 1024 Эб</tr>
+        <tr>1 Йб (йоттабайт) = 1024 Зб</tr>
+    </table>   
 </body>
+
 </html>
